Fixing basement overlay z-index issue

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -29,6 +29,7 @@
     bottom: 0;
     cursor: pointer;
     background: rgba(0, 0, 0, 0.5);
+    z-index: 9;
 }
 
 .header {
@@ -97,6 +98,6 @@
 }
 
 .item__date {
-     font-size: 12px;
-     color: #787878;
- }
+    font-size: 12px;
+    color: #787878;
+}
